WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65419
REGRESSION:culledInlineAbsoluteRects needs to translate a 0,0 point to absolute coordinates so that the top left position is accurate.
https://bugs.webkit.org/show_bug.cgi?id=65419
Summary
REGRESSION:culledInlineAbsoluteRects needs to translate a 0,0 point to absolu...
Enrica Casucci
Reported
2011-07-30 16:22:33 PDT
Make sure that culledInlineAbsoluteRect still does a translation of a 0,0 point to absolute coordinates so that the top left position is accurate. The equivalent bug for culledInlineAbsoluteQuads has already been fixed.
https://bugs.webkit.org/show_bug.cgi?id=60040
Attachments
Patch
(7.66 KB, patch)
2011-07-30 16:32 PDT
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-07-30 16:25:45 PDT
<
rdar://problem/9408862
>
Enrica Casucci
Comment 2
2011-07-30 16:32:17 PDT
Created
attachment 102444
[details]
Patch
mitz
Comment 3
2011-07-30 16:40:15 PDT
Comment on
attachment 102444
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102444&action=review
> Source/WebCore/ChangeLog:8 > + This bug fixes a regression introduced in
r83075
.
I think you mean “this patch”
> Source/WebCore/testing/Internals.h:40 > class Document; > class Element; > class Node; > +class ClientRect;
Please keep these in ASCII order.
> Source/WebCore/testing/Internals.h:64 > > + PassRefPtr<ClientRect> boundingBox(Element*, ExceptionCode&);
We need a newline before the private: label.
> Source/WebCore/testing/Internals.idl:41 > + ClientRect boundingBox(in Element element) raises(DOMException);
and maybe a newline above this
> LayoutTests/fast/inline/skipped-whitespace-boundingBox.html:10 > + //var rect = document.getElementById('test').getBoundingClientRect();
No need for this comment :)
Enrica Casucci
Comment 4
2011-07-30 16:52:02 PDT
http://trac.webkit.org/changeset/92059
Adam Barth
Comment 5
2011-07-30 20:40:08 PDT
This patch appears to have broken fast/css/outline-auto-empty-rects.html on Chromium Mac:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fcss%2Foutline-auto-empty-rects.html
Daniel Bates
Comment 6
2011-07-30 22:34:37 PDT
This patch broke the Windows Debug and Release build bots: [[ ... 4>Linking... 4>WebCoreTestSupport.lib(JSInternals.obj) : error LNK2019: unresolved external symbol "class JSC::JSValue __cdecl WebCore::toJS(class JSC::ExecState *,class WebCore::JSDOMGlobalObject *,class WebCore::ClientRect *)" (?toJS@WebCore@@YA?AVJSValue@JSC@@PAVExecState@
3@PAVJSDOMGlobalObject@1@PAVClientRect@1@@Z
) referenced in function "__int64 __fastcall WebCore::jsInternalsPrototypeFunctionBoundingBox(class JSC::ExecState *)" (?jsInternalsPrototypeFunctionBoundingBox@WebCore@@YI_JPAVExecState@JSC@@@Z) 4>WebCoreTestSupport.lib(Internals.obj) : error LNK2019: unresolved external symbol "private: __thiscall WebCore::ClientRect::ClientRect(void)" (??0ClientRect@WebCore@@AAE@XZ) referenced in function "public: static class WTF::PassRefPtr<class WebCore::ClientRect> __cdecl WebCore::ClientRect::create(void)" (?create@ClientRect@WebCore@@SA?AV?$PassRefPtr@VClientRect@WebCore@@@WTF@@XZ) 4>WebCoreTestSupport.lib(Internals.obj) : error LNK2019: unresolved external symbol "private: __thiscall WebCore::ClientRect::ClientRect(class WebCore::IntRect const &)" (??0ClientRect@WebCore@@AAE@ABVIntRect@
1@@Z
) referenced in function "public: static class WTF::PassRefPtr<class WebCore::ClientRect> __cdecl WebCore::ClientRect::create(class WebCore::IntRect const &)" (?create@ClientRect@WebCore@@SA?AV?$PassRefPtr@VClientRect@WebCore@@@WTF@@ABVIntRect@
2@@Z
) 4>WebCoreTestSupport.lib(Internals.obj) : error LNK2019: unresolved external symbol "public: class WebCore::IntRect __thiscall WebCore::RenderObject::absoluteBoundingBoxRect(bool)" (?absoluteBoundingBoxRect@RenderObject@WebCore@@QAE?AVIntRect@
2@_N@Z
) referenced in function "public: class WTF::PassRefPtr<class WebCore::ClientRect> __thiscall WebCore::Internals::boundingBox(class WebCore::Element *,int &)" (?boundingBox@Internals@WebCore@@QAE?AV?$PassRefPtr@VClientRect@WebCore@@@WTF@@PAVElement@
2@AAH@Z
) 4>WebCoreTestSupport.lib(Internals.obj) : error LNK2019: unresolved external symbol "public: void __thiscall WebCore::Document::updateLayoutIgnorePendingStylesheets(void)" (?updateLayoutIgnorePendingStylesheets@Document@WebCore@@QAEXXZ) referenced in function "public: class WTF::PassRefPtr<class WebCore::ClientRect> __thiscall WebCore::Internals::boundingBox(class WebCore::Element *,int &)" (?boundingBox@Internals@WebCore@@QAE?AV?$PassRefPtr@VClientRect@WebCore@@@WTF@@PAVElement@
2@AAH@Z
) ]] (
http://build.webkit.org/builders/Windows%20Release%20%28Build%29/builds/19341/steps/compile-webkit/logs/stdio
)
mitz
Comment 7
2011-07-30 22:56:48 PDT
Build fix attempt in
r92070
.
Daniel Bates
Comment 8
2011-07-30 23:17:02 PDT
For completeness, the GTK bots have also been failing since this patch landed; complaining about a missing cairo.h, weird. See
bug #65426
for more details.
Daniel Bates
Comment 9
2011-07-31 00:44:57 PDT
(In reply to
comment #4
)
>
http://trac.webkit.org/changeset/92059
This change also broke the WinCairo Debug build. Committed build fix attempt in <
http://trac.webkit.org/changeset/92078
>.
Daniel Bates
Comment 10
2011-07-31 01:29:34 PDT
(In reply to
comment #9
)
> (In reply to
comment #4
) > >
http://trac.webkit.org/changeset/92059
> > This change also broke the WinCairo Debug build. > > Committed build fix attempt in <
http://trac.webkit.org/changeset/92078
>.
Committed some more fixes in <
http://trac.webkit.org/changeset/92079
>. I needed to add the missing symbols to WebKit2CFLite.def to fix the build. Previously I only added them to WebKit_Cairo.def and WebKit_Cairo_debug.def, but this was insufficient. Are WebKit_Cairo.def and WebKit_Cairo_debug.def still used? I left the changes to WebKit_Cairo.def and WebKit_Cairo_debug.def made in <
http://trac.webkit.org/changeset/92078
> in the tree. It's pretty late and I'm tired. I'll look into this some more tomorrow. If these changes aren't needed then feel free to rollout <
http://trac.webkit.org/changeset/92078
>. CC'ing Brent Fulgham who may have some insight.
Daniel Bates
Comment 11
2011-07-31 02:04:05 PDT
(In reply to
comment #8
)
> For completeness, the GTK bots have also been failing since this patch landed; complaining about a missing cairo.h, weird. See
bug #65426
for more details.
Fixed in <
http://trac.webkit.org/changeset/92081
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug