REGRESSION: culledInlineAbsoluteRects needs to translate a 0,0 point to absolute coordinates so that the top left position is accurate. https://bugs.webkit.org/show_bug.cgi?id=65419 <rdar://problem/9408862>

Source/WebCore:

This patch fixes a regression introduced in r83075.
Make sure that culledInlineAbsoluteRects still does
a translation of a 0,0 point to absolute coordinates so that the top left position is
accurate.
This code path could not be tested via JavaScript. The patch
extends the Internals object to be able to test this case.

Reviewed by Dan Bernstein.

Test: fast/inline/skipped-whitespace-boundingBox.html

* WebCore.exp.in: Added some exports.
* rendering/RenderInline.cpp:
(WebCore::RenderInline::culledInlineAbsoluteRects):
* testing/Internals.cpp:
(WebCore::Internals::boundingBox):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

Reviewed by Dan Bernstein.

* fast/inline/skipped-whitespace-boundingBox-expected.txt: Added.
* fast/inline/skipped-whitespace-boundingBox.html: Added.



Canonical link: https://commits.webkit.org/81202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92059 268f45cc-cd09-0410-ab3c-d52691b4dbfc